# tinyplotlib

./: CMakeLists.txt  README.md  colormap.txt
include/: tinyplotlib.h
scripts/: bootstrap-linux.sh
src/: nanovg_rt.h  plot.cc  roboto-mono-medium.inc  tinyplotlib.cc
tests/: test_api.cc  test_colormap.cc  test_matplot.cc
